<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/PrimaryBackground"
    tools:context=".Other.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/login_email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <EditText
            android:id="@+id/login_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/button_accessory"
            android:text="@string/login_btn"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="10dp"
        android:layout_above="@id/no_account_text"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/no_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_no_account_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/login_register_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/login_register_button"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:background="@drawable/button_accessory"
        android:text="@string/create_account_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>